HelloUltraviolet/Fixtures/RejectedSource/Procedures/ContractResultOutsidePostcondition/Source/Main.uv
//! Rejected contract specimen for @result used outside a postcondition.

public procedure contractResultOutsidePostconditionReference() -> i32 {
    return @result
}
